--- a/vercel.json
+++ b/vercel.json
@@ -3,15 +3,7 @@
   "builds": [
     {
       "src": "meeting/wsgi.py",
-      "use": "@vercel/python",
-      "config": { "runtime": "python3.9" }
-    },
-    {
-      "src": "build_files.sh",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "staticfiles_build"
-      }
+      "use": "@vercel/python"
     }
   ],
   "routes": [
@@ -20,7 +12,7 @@
       "dest": "/static/$1"
     },
     {
-      "src": "/(.*)",
+      "src": "(.*)",
       "dest": "meeting/wsgi.py"
     }
   ]
